JUM-100 Ability to build Jumbune docker image from the latest SNAPSHOT codebase